# 2025-C-Software

./: README.md
2025-C-Advanced/: build.sh  run.sh
2025-C-Advanced/calib/: 9x7_35mm.txt  calibrate.py
2025-C-Advanced/include/: pic_deal.h  thread_deal.h
2025-C-Advanced/src/: main.cpp  pic_deal.cpp  shibie_Square_min.cpp
2025-C-NumberSquare/scripts/: build.sh
2025-C-NumberSquare/src/: main.cpp  python_wrapper.cpp  python_wrapper.h
2025-C-NumberSquare/src/python/: dataset.py  infer.py
2025-C-Software/3d/: camera_mount.txt
2025-C-Software/calib/: calibrate.py
2025-C-Software/docs/: report.txt  slides.txt
2025-C-Software/firmware/: CMakeLists.txt
2025-C-Software/firmware/include/: pic_deal.h  uart.h
2025-C-Software/firmware/src/: main.cpp  pic_deal.cpp  uart.cpp
